<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="false"
    android:layout_alignParentLeft="false"
    android:background="@color/app_background"
    tools:context=".MultyPlayer">


    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/resultTextView"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:onClick="playAgain"
        android:text="@string/playAgainButton"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:backgroundTint="@color/playAgain_buttonBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTextView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="410dp"
        android:layout_height="385dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playAgainButton">

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="330dp"
            android:layout_height="306dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/tictacboard"
            app:columnCount="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultTextView"
            app:rowCount="3"
            app:useDefaultMargins="false">


            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="70dp"
                android:layout_height="64dp"
                android:layout_margin="20dp"
                android:onClick="showImage"
                android:tag="0"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="70dp"
                android:layout_height="64dp"
                android:layout_margin="20dp"
                android:onClick="showImage"
                android:tag="1"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="70dp"
                android:layout_height="64dp"
                android:layout_margin="20dp"
                android:onClick="showImage"
                android:tag="2"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="70dp"
                android:layout_height="64dp"
                android:layout_margin="20dp"
                android:onClick="showImage"
                android:tag="3"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="70dp"
                android:layout_height="64dp"
                android:layout_margin="20dp"
                android:onClick="showImage"
                android:tag="4"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="70dp"
                android:layout_height="64dp"
                android:layout_margin="20dp"
                android:onClick="showImage"
                android:tag="5"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="70dp"
                android:layout_height="64dp"
                android:layout_margin="20dp"
                android:onClick="showImage"
                android:tag="6"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="70dp"
                android:layout_height="64dp"
                android:layout_margin="20dp"
                android:onClick="showImage"
                android:tag="7"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="70dp"
                android:layout_height="64dp"
                android:layout_margin="20dp"
                android:onClick="showImage"
                android:tag="8"
                tools:ignore="ContentDescription" />

        </androidx.gridlayout.widget.GridLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playerPoints1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/player_1"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pointsDisplay1"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_horizontal"
                android:text="@string/score"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:textSize="20sp"
            android:textStyle="bold">

            <TextView
                android:id="@+id/playerPoints2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/player_2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pointsDisplay2"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_horizontal"
                android:text="@string/score"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>